# duckdb_salesforce

./: CMakeLists.txt  DEBUG.md  Makefile  README.md  extension_config.cmake  test_extension.sh
.github/workflows/: MainDistributionPipeline.yml
.plans/: fix-minor-code-issues.md
scripts/: setup-custom-toolchain.sh
src/: salesforce_api.cpp  salesforce_auth.cpp  salesforce_extension.cpp  salesforce_extension.hpp  salesforce_metadata_cache.cpp  salesforce_object.cpp  salesforce_object.hpp  salesforce_secret.cpp  salesforce_soql.cpp
src/include/: salesforce_api.hpp  salesforce_auth.hpp  salesforce_extension.hpp  salesforce_metadata_cache.hpp  salesforce_object.hpp  salesforce_scan.hpp  salesforce_secret.hpp  salesforce_soql.hpp
test/sql/: salesforce.test
